# FastAPI_Payments_Service

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: consumer.py  main.py  outbox_worker.py
app/api/v1/: deps.py  payments.py
app/consumers/: deps.py  payment_consumer.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  rabbitmq.py
app/models/: __init__.py  base.py  outbox.py  payment.py
app/repositories/: base.py  outbox.py  payment.py
app/schemas/: event.py  payment.py
app/services/: outbox_publisher.py  payment.py  webhook.py
migrations/: env.py
migrations/versions/: 2026_06_19_1950-affaf63a7418_init.py
